crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_module_tests.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a test or property declaration.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Indent `test` or `prop` beneath `tests`; put test imports first.
