crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_list_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f [x = 1"
---
nash::syntax::unclosed_delimiter

  × Expected `]` to close `[`.
   ╭─[src/Main.nash:1:6]
 1 │ f [x = 1
   ·   ┬  ┬
   ·   │  ╰── expected `]`
   ·   ╰── opened here
   ╰────
  help: Add `]` here.
