crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_list_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was expecting a closing square bracket to end this list pattern:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Try adding a ] to see if that helps?

        Note: I can get confused by indentation in cases like this, so maybe you have a
        closing square bracket but it is not indented enough?
