crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_list_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I just saw an open square bracket, but then I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Try adding a ] to see if that helps?
