crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_record_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing a record pattern, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see a closing curly brace next. Try adding a } here?

        Hint: A record pattern looks like {x,y} or {name,age} where you list the field
        names you want to access.
