crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_record_field.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected a field name in this record pattern.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: List the required field names, separated by commas.
