crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_p_record_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f {x\n} = 1"
---
nash::syntax::indentation

  × Closing `}` is underindented.
   ╭─[src/Main.nash:2:1]
 1 │ f {x
   ·   ┬
   ·   ╰── opened here
 2 │ } = 1
   · ┬
   · ╰── underindented closing delimiter
   ╰────
  help: Indent `}` to continue this construct.
